added aggregation query
